Spinner desaparece al entrar en una de las opciones de seleccionar accion, pequeñas mejoras visuales en crear carrera y deportista

--- a/app/src/main/res/layout/fragment_crear_deportista.xml
+++ b/app/src/main/res/layout/fragment_crear_deportista.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:gravity="center"
-        android:text="Creacion Deportista"
+        android:textSize="18sp"
+        android:text="Creación Deportista"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.447"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="38dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="42dp"
         android:layout_marginBottom="40dp"
         android:text="Nombre"
         app:layout_constraintBottom_toTopOf="@+id/textViewEquipo"
@@ -58,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="43dp"
-        android:text="Genero"
+        android:text="Género"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewEdad" />
 
@@ -66,11 +67,11 @@
         android:id="@+id/editTextTextNombreDeportista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="77dp"
         android:ems="10"
-        android:inputType="text"
         android:hint="Nombre"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewElegidoDeporte" />
 
@@ -111,7 +112,7 @@
         android:id="@+id/buttonGuardarDeportista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="35dp"
         android:backgroundTint="@color/green"
         android:text="Guardar"
         app:layout_constraintEnd_toEndOf="parent"
