Mejoras en creditos y login.Quitados log innecesarios. Bajar tamaño en fotos

--- a/app/src/main/res/layout/activity_creditos.xml
+++ b/app/src/main/res/layout/activity_creditos.xml
@@ -27,7 +27,7 @@
         android:layout_height="111dp"
         android:layout_marginTop="84dp"
         android:gravity="center"
-        android:text="APP creada por Hugo Serrano Hernández"
+        android:text="APP creada por \n\n Hugo Serrano Hernández"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,10 +40,12 @@
         android:id="@+id/textViewCIPF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="44dp"
         android:text="Proyecto TFG realizado para el:"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCreadopor" />
 
@@ -51,6 +53,7 @@
         android:id="@+id/imageViewlogocifp"
         android:layout_width="265dp"
         android:layout_height="122dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCIPF"
@@ -62,7 +65,7 @@
         android:layout_height="30dp"
         android:layout_marginBottom="64dp"
         android:gravity="center"
-        android:text="Versión 0.1"
+        android:text="Versión 1.0"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
