--- a/app/src/main/res/layout/fragment_crear_carrera.xml
+++ b/app/src/main/res/layout/fragment_crear_carrera.xml
@@ -8,6 +8,27 @@
     tools:context=".SeleccionAccionFragment">
 
 
+    <TextView
+        android:id="@+id/textViewFecha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="Fecha"
+        app:layout_constraintStart_toStartOf="@+id/textViewLocalidad"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLocalidad" />
+
+    <EditText
+        android:id="@+id/editTextTextFecha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:hint="Pon la fecha"
+        android:inputType="none"
+        android:focusable="false"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="@+id/editTextTextLocalidad"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextLocalidad" />
 
     <TextView
         android:id="@+id/textViewCreacionCarrera"
@@ -29,8 +50,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="48dp"
         android:text="Nombre Carrera"
+        app:layout_constraintEnd_toStartOf="@+id/editTextTextNombreCarrera"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCreacionCarrera" />
 
@@ -63,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="40dp"
         android:text="Localidad"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -75,11 +98,12 @@
         android:layout_marginStart="130dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="131dp"
+        android:backgroundTint="@color/green"
         android:text="Guardar Carrera"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextLocalidad"
-        android:backgroundTint="@color/green"/>
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextFecha" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
