--- a/app/src/main/res/layout/activity_creditos.xml
+++ b/app/src/main/res/layout/activity_creditos.xml
@@ -98,7 +98,18 @@
         app:layout_constraintTop_toBottomOf="@+id/imageViewlogocifp"
         app:srcCompat="@drawable/linkedinicon" />
 
-
+    <ImageButton
+        android:id="@+id/imageButtonDescargarDatos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewVersion"
+        app:srcCompat="@drawable/download_icon"
+        android:backgroundTint="@color/white"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
