--- a/app/src/main/res/layout/activity_creditos.xml
+++ b/app/src/main/res/layout/activity_creditos.xml
@@ -111,8 +111,8 @@
 
     <TextView
         android:id="@+id/textViewDescargarDatos"
-        android:layout_width="108dp"
-        android:layout_height="18dp"
+        android:layout_width="120dp"
+        android:layout_height="24dp"
         android:layout_marginStart="4dp"
         android:gravity="left"
         android:text="Descargar Datos"
@@ -135,16 +135,15 @@
 
     <TextView
         android:id="@+id/textViewBorrarDatos"
-        android:layout_width="108dp"
-        android:layout_height="18dp"
+        android:layout_width="120dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="4dp"
         android:gravity="right"
         android:text="Borrar datos"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/imageButtonBorrarDatos"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewVersion"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textViewVersion" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
